Add EPS profiles to the container

--- a/.tools/Dockerfile
+++ b/.tools/Dockerfile
@@ -33,6 +33,11 @@ RUN chmod 755 /tools/go
 RUN chmod 755 /tools/show
 RUN chmod 755 /tools/tx
 
+# EU profiles are not published to the package repository's, so we'll have get them manually
+RUN mkdir -p ~/.fhir/packages
+RUN mkdir ~/.fhir/packages/hl7.fhir.eu.eps#0.0.1-ci && wget -O - https://build.fhir.org/ig/hl7-eu/eps/package.tgz | tar -xz -C ~/.fhir/packages/hl7.fhir.eu.eps#0.0.1-ci
+RUN mkdir ~/.fhir/packages/hl7.fhir.eu.hdr#current && wget -O - https://hl7.eu/fhir/hdr/package.tgz | tar -xz -C ~/.fhir/packages/hl7.fhir.eu.hdr#current
+
 RUN echo 'echo "Welcome to the Plugathon Validator container"' >> /etc/bash.bashrc
 RUN echo 'echo' >> /etc/bash.bashrc
 RUN echo 'echo "This container uses the IG Publisher as a tool for validation of resources. To use:"' >> /etc/bash.bashrc
