Make Bookworm explicit

--- a/.tools/Dockerfile
+++ b/.tools/Dockerfile
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/devcontainers/java:21
+FROM mcr.microsoft.com/devcontainers/java:21-bookworm
 
 # Install system components
 RUN apt-get update && apt-get -y install build-essential jq nodejs npm ruby-full rubygems zlib1g-dev mitmproxy python3-requests python3-termcolor wget dos2unix
